[gd_scene load_steps=17 format=3 uid="uid://bvhxbhtembogm"]

[ext_resource type="Script" uid="uid://7jmmf0t47vaw" path="res://scripts/player/player.gd" id="1_dovo2"]
[ext_resource type="Texture2D" uid="uid://6en7nbqgguu5" path="res://assets/textures/env/main/env-texture.jpg" id="2_75vfm"]
[ext_resource type="Script" uid="uid://cx1a1yulq6nx3" path="res://scripts/player/state/player-state-machine.gd" id="3_gmlin"]
[ext_resource type="Script" uid="uid://b7hcib1fo1d54" path="res://scripts/player/player-data.gd" id="4_75vfm"]
[ext_resource type="Script" uid="uid://c3v2vtgy4wphe" path="res://scripts/player/state/idle-state.gd" id="5_0owmy"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_gmlin"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0owmy"]
albedo_color = Color(0.45233065, 0.3540971, 0.9986847, 1)
albedo_texture = ExtResource("2_75vfm")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_p47bc"]
material = SubResource("StandardMaterial3D_0owmy")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_75vfm"]
albedo_color = Color(0.45233065, 0.3540971, 0.9986847, 1)
albedo_texture = ExtResource("2_75vfm")

[sub_resource type="BoxMesh" id="BoxMesh_0owmy"]
material = SubResource("StandardMaterial3D_75vfm")
size = Vector3(0.1, 0.68, 0.1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_p47bc"]
points = PackedVector3Array(0.049999997, 0.3291428, 0.049999997, -0.049999997, -0.31085715, -0.049999997, -0.049999997, -0.31085715, 0.047142863, 0.049999997, -0.3291428, 0.049999997, 0.047142863, -0.31085715, -0.049999997, -0.049999997, 0.31085715, -0.049999997, -0.049999997, 0.31085715, 0.047142863, 0.047142863, 0.31085715, -0.049999997)

[sub_resource type="Resource" id="Resource_0owmy"]
script = ExtResource("4_75vfm")
metadata/_custom_type_script = "uid://b7hcib1fo1d54"

[sub_resource type="Animation" id="Animation_qek5x"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera/PivotArm:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera/PivotArm/MeshArm:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.38, -0.22904134, -0.435), Vector3(0.38, -0.24546456, -0.435)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera/PivotArm/MeshArm:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(-1.0297443, 0, 0), Vector3(-1.0518525, -0.25190598, 0.2947971)]
}

[sub_resource type="Animation" id="Animation_5gtgg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera/PivotArm:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera/PivotArm/MeshArm:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.38, -0.22904134, -0.435)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera/PivotArm/MeshArm:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.0297443, 0, 0)]
}

[sub_resource type="Animation" id="Animation_h17s1"]
resource_name = "attack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera/PivotArm/MeshArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.38, -0.22904134, -0.435)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera/PivotArm/MeshArm:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.0297443, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera/PivotArm:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.33161256, 1.1728612, 0.10471976)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_je7p5"]
_data = {
&"RESET": SubResource("Animation_5gtgg"),
&"attack": SubResource("Animation_h17s1"),
&"idle": SubResource("Animation_qek5x")
}

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_dovo2")

[node name="CollisionBody" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
shape = SubResource("CylinderShape3D_gmlin")

[node name="PivotModel" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Model" type="MeshInstance3D" parent="PivotModel"]
mesh = SubResource("CapsuleMesh_p47bc")

[node name="Area3D" type="Area3D" parent="PivotModel/Model"]

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5640414, -0.5)

[node name="PivotArm" type="Node3D" parent="Camera"]
transform = Transform3D(0.9999998, 0, 0, 0, 0.99999994, 0, 0, 0, 0.9999998, 0, 0, 0)

[node name="MeshArm" type="MeshInstance3D" parent="Camera/PivotArm"]
transform = Transform3D(1, 0, 0, 0, 0.5150381, 0.8571673, 0, -0.8571673, 0.5150381, 0.38, -0.22904134, -0.435)
mesh = SubResource("BoxMesh_0owmy")
skeleton = NodePath("../../../..")

[node name="Hitbox" type="Area3D" parent="Camera/PivotArm/MeshArm"]
transform = Transform3D(1.15, 0, 0, 0, 1.15, 0, 0, 0, 1.15, 0, 0, 0)
monitoring = false

[node name="CollisionHitbox" type="CollisionShape3D" parent="Camera/PivotArm/MeshArm/Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, -2.9802322e-08, 0, 2.9802322e-08, 1, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_p47bc")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("3_gmlin")
player = NodePath("..")
player_data = SubResource("Resource_0owmy")
initial_state = null

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("5_0owmy")

[node name="WalkState" type="Node" parent="StateMachine"]

[node name="RunState" type="Node" parent="StateMachine"]

[node name="JumpState" type="Node" parent="StateMachine"]

[node name="AttackState" type="Node" parent="StateMachine"]

[node name="AudioComponent" type="Node" parent="."]

[node name="FootstepsAudio" type="AudioStreamPlayer3D" parent="AudioComponent"]

[node name="JumpAudio" type="AudioStreamPlayer3D" parent="AudioComponent"]

[node name="AttackAudio" type="AudioStreamPlayer3D" parent="AudioComponent"]

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_je7p5")
}
autoplay = "idle"
